--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "description": "Front-end For Serving Images from the Pet Photo Album",
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.1.0",
     "react-photo-album": "^3.0.2",
+    "react-router-bootstrap": "^0.26.3",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "yet-another-react-lightbox": "^3.21.7"
   },
