--- a/package.json
+++ b/package.json
@@ -4,8 +4,26 @@
   "description": "A Photo Album For Our Pets",
   "author": "dkgreco@thetroveofgems.tech",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed:import": "node db/data/seed.from.mocks.js",
+    "seed:destroy": "node db/data/seed.from.mocks.js -d",
+    "start:server": "NODE_ENV=production node main",
+    "dev:server": "NODE_ENV=development nodemon main",
+    "start:client": "npm run start --prefix client",
+    "build:client": "npm run build --prefix client"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^9.1.2",
+    "express": "^4.21.2",
+    "mongoose": "^8.9.3",
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.7",
+    "nodemon": "^3.1.9"
+  }
 }
