--- a/client/package.json
+++ b/client/package.json
@@ -5,15 +5,18 @@
   "description": "Front-end For Serving Images from the Pet Photo Album",
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.1.0",
     "react-photo-album": "^3.0.2",
+    "react-redux": "^9.2.0",
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.2",
     "yet-another-react-lightbox": "^3.21.7"
   },
   "scripts": {
@@ -39,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
