--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed:import": "node db/data/seed.from.mocks.js",
     "seed:destroy": "node db/data/seed.from.mocks.js -d",
-    "start:server": "node server.js",
-    "dev:server": "NODE_ENV=development nodemon server.js",
+    "dev:server": "dotenvx run -f ./server/config/env/.env.development -- nodemon server/server.js",
+    "start:server": "node server/server.js",
     "start:client": "npm run start --prefix client",
     "build:client": "npm run build --prefix client",
     "start:dev": "concurrently \"npm run dev:server\" \"npm run start:client\"",
-    "build:onRender": "npm install && npm install --prefix client && npm run build --prefix client"
+    "build:onRender": "npm install && npm install --prefix client && npm run build --prefix client",
+    "start:onRender": "concurrently \"npm run start:server\" \"npm run start:client\""
   },
   "private": true,
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.32.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "concurrently": "^9.1.2",
