--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 .idea
 
-/node_modules/
-server/config/env
-server/db/data/mocks/user.mocks.js
-
-/db/data
-/db/data/mocks/user.mocks.js
-
 archive
+
+/node_modules/
+
+server/config/env
+
+server/db/data
+server/db/data/mocks/user.mocks.js
