Clean up of more dev files and attempting fix for swagger docs

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "ToG PetAlbum",
+  "short_name": "ToG Photo Album",
   "name": "The Trove of Gems Photo Album",
   "icons": [
     {
