--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "description": "Front-end For Serving Images from the Pet Photo Album",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@cloudinary/react": "^1.13.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "@dnd-kit/core": "^6.3.1",
     "@reduxjs/toolkit": "^2.5.0",
     "bootstrap": "^5.3.3",
