--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-photo-album": "^3.0.2",
     "react-redux": "^9.2.0",
     "react-router-bootstrap": "^0.26.3",
