Added seo and moved some tags

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "ToG Photo Album",
-  "name": "The Trove of Gems Photo Album",
+  "short_name": "ToG Technology Photo Album",
+  "name": "The Trove of Gems Technology Photo Album",
   "icons": [
     {
       "src": "favicon.ico",
