--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,13 @@
     "@cloudinary/react": "^1.13.1",
     "@cloudinary/url-gen": "^1.21.0",
     "@dnd-kit/core": "^6.3.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.4",
+    "@mui/material": "^6.4.4",
     "@reduxjs/toolkit": "^2.5.0",
     "bootstrap": "^5.3.3",
+    "classnames": "^2.5.1",
     "cra-template": "1.2.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.10.7",
