--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@js-temporal/polyfill": "^0.4.4",
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
     "@reduxjs/toolkit": "^2.5.0",
