--- a/package.json
+++ b/package.json
@@ -20,15 +20,21 @@
   "private": true,
   "dependencies": {
     "@dotenvx/dotenvx": "^1.32.1",
+    "@js-temporal/polyfill": "^0.4.4",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
+    "compression": "^1.8.0",
     "concurrently": "^9.1.2",
     "cookie-parser": "^1.4.7",
+    "exif-js": "^2.3.0",
+    "exifreader": "^4.26.1",
     "express": "^4.21.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
+    "mongo-sanitize": "^1.1.0",
     "mongoose": "^8.9.3",
     "multer": "^1.4.5-lts.1",
     "redis": "^4.7.0",
