--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@js-temporal/polyfill": "^0.4.4",
+    "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "compression": "^1.8.0",
@@ -33,8 +34,11 @@
     "express": "^4.21.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
+    "form-data": "^4.0.2",
     "helmet": "^8.0.0",
     "hpp": "^0.2.3",
+    "imgbb-image-uploader": "^1.0.6",
+    "imgbb-uploader": "^1.5.1",
     "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongo-sanitize": "^1.1.0",
