--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "Front-end For Serving Images from the Pet Photo Album",
   "dependencies": {
+    "@api.video/react-player": "^1.1.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@cloudinary/react": "^1.13.1",
     "@cloudinary/url-gen": "^1.21.0",
@@ -22,6 +23,7 @@
     "react-dom": "^18.1.0",
     "react-helmet-async": "^2.0.5",
     "react-photo-album": "^3.0.2",
+    "react-player": "^2.16.0",
     "react-redux": "^9.2.0",
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^6.10.0",
