--- a/package.json
+++ b/package.json
@@ -19,22 +19,27 @@
   },
   "private": true,
   "dependencies": {
+    "@api.video/nodejs-client": "^2.6.8",
     "@dotenvx/dotenvx": "^1.32.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@js-temporal/polyfill": "^0.4.4",
     "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
+    "clamscan": "^2.4.0",
     "cloudinary": "^2.5.1",
     "compression": "^1.8.0",
     "concurrently": "^9.1.2",
     "cookie-parser": "^1.4.7",
+    "dist-exiftool": "^10.53.0",
     "exif-js": "^2.3.0",
     "exifreader": "^4.26.1",
     "express": "^4.21.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
+    "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.2",
+    "fs-extra": "^11.3.0",
     "helmet": "^8.0.0",
     "hpp": "^0.2.3",
     "imgbb-image-uploader": "^1.0.6",
@@ -43,7 +48,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^8.9.3",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.0",
+    "node-exiftool": "^2.3.0",
     "redis": "^4.7.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
